--- a/The Math/ChartDetailView.xib
+++ b/The Math/ChartDetailView.xib
@@ -214,102 +214,54 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="12F-GG-nX9">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                     <subviews>
-                                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0kA-Rl-mHH">
+                                        <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OK1-x9-l8Z">
                                             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                            <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qup-MZ-sLO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="600" id="Krq-cw-IVJ"/>
-                                                        <constraint firstAttribute="height" constant="200" id="whZ-ei-N4s">
-                                                            <variation key="heightClass=compact" constant="110"/>
-                                                        </constraint>
-                                                    </constraints>
-                                                    <variation key="default">
-                                                        <mask key="constraints">
-                                                            <exclude reference="Krq-cw-IVJ"/>
-                                                            <exclude reference="whZ-ei-N4s"/>
-                                                        </mask>
-                                                    </variation>
-                                                    <variation key="heightClass=compact">
-                                                        <mask key="constraints">
-                                                            <include reference="Krq-cw-IVJ"/>
-                                                            <include reference="whZ-ei-N4s"/>
-                                                        </mask>
-                                                    </variation>
-                                                </view>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="qup-MZ-sLO" firstAttribute="leading" secondItem="0kA-Rl-mHH" secondAttribute="leading" id="0hB-Jj-woh"/>
-                                                <constraint firstAttribute="trailing" secondItem="qup-MZ-sLO" secondAttribute="trailing" id="40E-0G-arq"/>
-                                                <constraint firstItem="qup-MZ-sLO" firstAttribute="top" secondItem="0kA-Rl-mHH" secondAttribute="top" id="7mb-7d-QXi"/>
-                                                <constraint firstAttribute="bottom" secondItem="qup-MZ-sLO" secondAttribute="bottom" id="FI7-mp-Mg8"/>
-                                            </constraints>
-                                            <variation key="default">
-                                                <mask key="subviews">
-                                                    <exclude reference="qup-MZ-sLO"/>
-                                                </mask>
-                                                <mask key="constraints">
-                                                    <exclude reference="0hB-Jj-woh"/>
-                                                    <exclude reference="40E-0G-arq"/>
-                                                    <exclude reference="7mb-7d-QXi"/>
-                                                    <exclude reference="FI7-mp-Mg8"/>
-                                                </mask>
-                                            </variation>
-                                            <variation key="heightClass=compact">
-                                                <mask key="subviews">
-                                                    <include reference="qup-MZ-sLO"/>
-                                                </mask>
-                                                <mask key="constraints">
-                                                    <include reference="0hB-Jj-woh"/>
-                                                    <include reference="40E-0G-arq"/>
-                                                    <include reference="7mb-7d-QXi"/>
-                                                    <include reference="FI7-mp-Mg8"/>
-                                                </mask>
-                                            </variation>
-                                        </scrollView>
+                                        </mapView>
                                     </subviews>
                                     <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="0kA-Rl-mHH" secondAttribute="trailing" id="1Ur-hq-CUD"/>
+                                        <constraint firstAttribute="trailing" secondItem="OK1-x9-l8Z" secondAttribute="trailing" constant="30" id="Fji-iL-jXR">
+                                            <variation key="heightClass=compact" constant="0.0"/>
+                                        </constraint>
                                         <constraint firstAttribute="height" constant="178" id="G3n-to-BKX">
-                                            <variation key="heightClass=compact" constant="110"/>
+                                            <variation key="heightClass=compact" constant="130"/>
                                         </constraint>
                                         <constraint firstAttribute="height" constant="200" id="KAg-Pe-rR9">
                                             <variation key="heightClass=compact" constant="160"/>
                                         </constraint>
-                                        <constraint firstItem="0kA-Rl-mHH" firstAttribute="top" secondItem="12F-GG-nX9" secondAttribute="top" id="PRb-FN-NPs"/>
+                                        <constraint firstItem="OK1-x9-l8Z" firstAttribute="top" secondItem="12F-GG-nX9" secondAttribute="top" id="KeD-qp-e0U"/>
+                                        <constraint firstAttribute="bottom" secondItem="OK1-x9-l8Z" secondAttribute="bottom" id="Rlr-S9-Vvn"/>
                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="178" id="gqa-wc-kB0"/>
-                                        <constraint firstItem="0kA-Rl-mHH" firstAttribute="leading" secondItem="12F-GG-nX9" secondAttribute="leading" id="wEd-yf-h04"/>
-                                        <constraint firstAttribute="bottom" secondItem="0kA-Rl-mHH" secondAttribute="bottom" id="xJ0-9u-OMG"/>
+                                        <constraint firstItem="OK1-x9-l8Z" firstAttribute="leading" secondItem="12F-GG-nX9" secondAttribute="leading" constant="30" id="lhn-QG-8oa">
+                                            <variation key="heightClass=compact" constant="0.0"/>
+                                        </constraint>
                                     </constraints>
                                     <variation key="default">
                                         <mask key="subviews">
-                                            <exclude reference="0kA-Rl-mHH"/>
+                                            <exclude reference="OK1-x9-l8Z"/>
                                         </mask>
                                         <mask key="constraints">
                                             <exclude reference="G3n-to-BKX"/>
                                             <exclude reference="KAg-Pe-rR9"/>
                                             <exclude reference="gqa-wc-kB0"/>
-                                            <exclude reference="1Ur-hq-CUD"/>
-                                            <exclude reference="PRb-FN-NPs"/>
-                                            <exclude reference="wEd-yf-h04"/>
-                                            <exclude reference="xJ0-9u-OMG"/>
+                                            <exclude reference="Fji-iL-jXR"/>
+                                            <exclude reference="KeD-qp-e0U"/>
+                                            <exclude reference="Rlr-S9-Vvn"/>
+                                            <exclude reference="lhn-QG-8oa"/>
                                         </mask>
                                     </variation>
                                     <variation key="heightClass=compact">
                                         <mask key="subviews">
-                                            <include reference="0kA-Rl-mHH"/>
+                                            <include reference="OK1-x9-l8Z"/>
                                         </mask>
                                         <mask key="constraints">
                                             <include reference="G3n-to-BKX"/>
                                             <exclude reference="KAg-Pe-rR9"/>
                                             <exclude reference="gqa-wc-kB0"/>
-                                            <include reference="1Ur-hq-CUD"/>
-                                            <include reference="PRb-FN-NPs"/>
-                                            <include reference="wEd-yf-h04"/>
-                                            <include reference="xJ0-9u-OMG"/>
+                                            <include reference="Fji-iL-jXR"/>
+                                            <include reference="KeD-qp-e0U"/>
+                                            <include reference="Rlr-S9-Vvn"/>
+                                            <include reference="lhn-QG-8oa"/>
                                         </mask>
                                     </variation>
                                 </view>
@@ -319,10 +271,16 @@
                                 <constraint firstItem="12F-GG-nX9" firstAttribute="top" secondItem="SDV-Zh-V5M" secondAttribute="bottom" id="DsZ-co-muS">
                                     <variation key="heightClass=compact" constant="20"/>
                                 </constraint>
-                                <constraint firstItem="12F-GG-nX9" firstAttribute="leading" secondItem="2Zn-7x-b4A" secondAttribute="leading" id="K0B-fE-JdT"/>
-                                <constraint firstAttribute="bottom" secondItem="12F-GG-nX9" secondAttribute="bottom" constant="80" id="bVQ-9z-CWh"/>
+                                <constraint firstItem="12F-GG-nX9" firstAttribute="leading" secondItem="2Zn-7x-b4A" secondAttribute="leading" id="K0B-fE-JdT">
+                                    <variation key="heightClass=compact" constant="30"/>
+                                </constraint>
+                                <constraint firstAttribute="bottom" secondItem="12F-GG-nX9" secondAttribute="bottom" constant="80" id="bVQ-9z-CWh">
+                                    <variation key="heightClass=compact" constant="60"/>
+                                </constraint>
                                 <constraint firstItem="SDV-Zh-V5M" firstAttribute="top" secondItem="2Zn-7x-b4A" secondAttribute="top" id="fWY-JI-DSc"/>
-                                <constraint firstAttribute="trailing" secondItem="12F-GG-nX9" secondAttribute="trailing" id="ful-PU-1aA"/>
+                                <constraint firstAttribute="trailing" secondItem="12F-GG-nX9" secondAttribute="trailing" id="ful-PU-1aA">
+                                    <variation key="heightClass=compact" constant="30"/>
+                                </constraint>
                                 <constraint firstItem="SDV-Zh-V5M" firstAttribute="leading" secondItem="2Zn-7x-b4A" secondAttribute="leading" id="j3C-uT-jx2"/>
                                 <constraint firstAttribute="trailing" secondItem="SDV-Zh-V5M" secondAttribute="trailing" id="jur-qJ-KpD"/>
                                 <constraint firstAttribute="width" constant="600" id="lPQ-dI-3O0"/>
@@ -333,13 +291,13 @@
                                 </mask>
                                 <mask key="constraints">
                                     <exclude reference="lPQ-dI-3O0"/>
-                                    <exclude reference="fWY-JI-DSc"/>
-                                    <exclude reference="j3C-uT-jx2"/>
-                                    <exclude reference="jur-qJ-KpD"/>
                                     <exclude reference="DsZ-co-muS"/>
                                     <exclude reference="K0B-fE-JdT"/>
                                     <exclude reference="bVQ-9z-CWh"/>
                                     <exclude reference="ful-PU-1aA"/>
+                                    <exclude reference="fWY-JI-DSc"/>
+                                    <exclude reference="j3C-uT-jx2"/>
+                                    <exclude reference="jur-qJ-KpD"/>
                                 </mask>
                             </variation>
                             <variation key="heightClass=compact">
@@ -348,13 +306,13 @@
                                 </mask>
                                 <mask key="constraints">
                                     <include reference="lPQ-dI-3O0"/>
-                                    <include reference="fWY-JI-DSc"/>
-                                    <include reference="j3C-uT-jx2"/>
-                                    <include reference="jur-qJ-KpD"/>
                                     <include reference="DsZ-co-muS"/>
                                     <include reference="K0B-fE-JdT"/>
                                     <include reference="bVQ-9z-CWh"/>
                                     <include reference="ful-PU-1aA"/>
+                                    <include reference="fWY-JI-DSc"/>
+                                    <include reference="j3C-uT-jx2"/>
+                                    <include reference="jur-qJ-KpD"/>
                                 </mask>
                             </variation>
                         </view>
@@ -411,11 +369,11 @@
                 <outlet property="categoryContainerView" destination="nNa-GI-zIm" id="2H2-80-9ON"/>
                 <outlet property="contentViewWidthConstraint" destination="lPQ-dI-3O0" id="Vng-WN-vvZ"/>
                 <outlet property="dateLabel" destination="OMG-sg-zCC" id="6tI-X4-HhZ"/>
+                <outlet property="mapContainerView" destination="12F-GG-nX9" id="iQG-mC-ODK"/>
+                <outlet property="mapView" destination="OK1-x9-l8Z" id="vHz-Wo-BN3"/>
                 <outlet property="noteLabel" destination="WAj-Rm-Xrb" id="l1d-Mf-BfA"/>
                 <outlet property="progressView" destination="pLz-gx-ZOP" id="vhv-Hz-gam"/>
-                <outlet property="subcontentViewWidthConstraint" destination="Krq-cw-IVJ" id="czQ-b8-CEr"/>
                 <outlet property="timeLabel" destination="kX9-B7-qyn" id="8k5-m3-WTF"/>
-                <outlet property="vendorInformationContainerView" destination="qup-MZ-sLO" id="qHA-3P-YZu"/>
             </connections>
             <point key="canvasLocation" x="225" y="153.5"/>
         </view>
