copy changes from Damian

--- a/The Math/OnboardingJournalView.xib
+++ b/The Math/OnboardingJournalView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -22,11 +22,16 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note what your mood might be related to, and write yourself a note to remember the moment better later." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UuV-xl-iHJ">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UuV-xl-iHJ">
                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="236" id="Dj1-KI-vGt"/>
+                                <constraint firstAttribute="width" constant="236" id="Dj1-KI-vGt">
+                                    <variation key="heightClass=regular-widthClass=compact" constant="305"/>
+                                </constraint>
                             </constraints>
+                            <string key="text">Write your self a quick note to remember the moment later: Why were you stressed? Why did you feel good? 
+
+Use the Categories to help understand how your moods relate to different areas of your life.</string>
                             <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -49,7 +54,9 @@
                         <constraint firstItem="UuV-xl-iHJ" firstAttribute="top" secondItem="ko4-Et-uyu" secondAttribute="bottom" constant="8" id="Mrr-jI-mpF"/>
                         <constraint firstItem="kWJ-sZ-D0a" firstAttribute="top" secondItem="HJ0-HY-Zld" secondAttribute="top" id="Rhi-Wh-zuc"/>
                         <constraint firstItem="ko4-Et-uyu" firstAttribute="top" secondItem="kWJ-sZ-D0a" secondAttribute="bottom" constant="12" id="UKy-7W-xgb"/>
-                        <constraint firstAttribute="bottom" secondItem="UuV-xl-iHJ" secondAttribute="bottom" id="k1J-0k-ahG"/>
+                        <constraint firstAttribute="bottom" secondItem="UuV-xl-iHJ" secondAttribute="bottom" id="k1J-0k-ahG">
+                            <variation key="heightClass=regular-widthClass=compact" constant="46"/>
+                        </constraint>
                         <constraint firstAttribute="centerX" secondItem="UuV-xl-iHJ" secondAttribute="centerX" id="kq7-H1-bFz"/>
                         <constraint firstItem="ko4-Et-uyu" firstAttribute="leading" secondItem="HJ0-HY-Zld" secondAttribute="leading" constant="8" id="vzz-zD-6Q1"/>
                     </constraints>
@@ -121,6 +128,6 @@
         </view>
     </objects>
     <resources>
-        <image name="onboarding_02" width="192" height="322"/>
+        <image name="onboarding_02" width="194" height="330"/>
     </resources>
 </document>
