--- a/The Math/OnboardingLocationView.xib
+++ b/The Math/OnboardingLocationView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -10,7 +10,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9iG-9i-A84">
+                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9iG-9i-A84">
                     <rect key="frame" x="100" y="134" width="400" height="331"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location permission" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ToB-kt-znT">
@@ -67,13 +67,13 @@
                             <exclude reference="iXW-gD-Bjp"/>
                         </mask>
                         <mask key="constraints">
+                            <exclude reference="Xgf-su-d78"/>
+                            <exclude reference="sNS-L1-RZ3"/>
                             <exclude reference="6wy-Ge-qhF"/>
                             <exclude reference="Sy8-a8-CCO"/>
                             <exclude reference="czo-WZ-Ube"/>
                             <exclude reference="fcR-Kx-Jeq"/>
                             <exclude reference="u9N-af-pRZ"/>
-                            <exclude reference="Xgf-su-d78"/>
-                            <exclude reference="sNS-L1-RZ3"/>
                             <exclude reference="FN9-s0-Xte"/>
                             <exclude reference="Fnj-yY-1uP"/>
                             <exclude reference="eEz-0W-10Y"/>
@@ -88,13 +88,13 @@
                             <include reference="iXW-gD-Bjp"/>
                         </mask>
                         <mask key="constraints">
+                            <include reference="Xgf-su-d78"/>
+                            <include reference="sNS-L1-RZ3"/>
                             <include reference="6wy-Ge-qhF"/>
                             <include reference="Sy8-a8-CCO"/>
                             <include reference="czo-WZ-Ube"/>
                             <include reference="fcR-Kx-Jeq"/>
                             <include reference="u9N-af-pRZ"/>
-                            <include reference="Xgf-su-d78"/>
-                            <include reference="sNS-L1-RZ3"/>
                             <include reference="FN9-s0-Xte"/>
                             <include reference="Fnj-yY-1uP"/>
                             <include reference="eEz-0W-10Y"/>
