--- a/The Math/OnboardingMoodView.xib
+++ b/The Math/OnboardingMoodView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -22,11 +22,11 @@
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record your mood by simply holding down the blue button. The longer you hold the better you feel." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kow-pK-2tn">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record your mood simply by holding down the blue button. The better your mood, the longer you hold down the button." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kow-pK-2tn">
                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="300" id="YM3-3J-Edb">
-                                    <variation key="heightClass=regular-widthClass=compact" constant="280"/>
+                                    <variation key="heightClass=regular-widthClass=compact" constant="286"/>
                                 </constraint>
                             </constraints>
                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
@@ -51,7 +51,9 @@
                         <constraint firstItem="D8g-fr-JUp" firstAttribute="top" secondItem="pSU-nY-Lbw" secondAttribute="bottom" constant="12" id="NOU-Su-yAy"/>
                         <constraint firstItem="Kow-pK-2tn" firstAttribute="top" secondItem="D8g-fr-JUp" secondAttribute="bottom" constant="8" id="SR4-dd-PjT"/>
                         <constraint firstAttribute="trailing" secondItem="D8g-fr-JUp" secondAttribute="trailing" constant="8" id="Uw3-un-ZRL"/>
-                        <constraint firstAttribute="bottom" secondItem="Kow-pK-2tn" secondAttribute="bottom" id="ZCV-WR-yLM"/>
+                        <constraint firstAttribute="bottom" secondItem="Kow-pK-2tn" secondAttribute="bottom" id="ZCV-WR-yLM">
+                            <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                        </constraint>
                         <constraint firstAttribute="trailing" secondItem="Kow-pK-2tn" secondAttribute="trailing" constant="8" id="bTj-iq-yQL"/>
                         <constraint firstItem="D8g-fr-JUp" firstAttribute="leading" secondItem="jxG-vJ-Npb" secondAttribute="leading" constant="8" id="fM4-em-xDZ"/>
                         <constraint firstAttribute="centerX" secondItem="Kow-pK-2tn" secondAttribute="centerX" id="lDV-5V-afK"/>
